Add block models for 3 of the tables, and refactor a bit